22-lab-configure-vpc-flow-logs-and-generate-traffic/igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = "${aws_vpc.my_vpc.id}"
  tags = {
    Name = "MyInternetGateway"
  }
}
