22-lab-configure-vpc-flow-logs-and-generate-traffic/sg.tf
resource "aws_security_group" "ssh_http_sg" {
  name        = "ssh_http_sg"
  description = "SSH and HTTP Security Group"
  vpc_id      = "${aws_vpc.my_vpc.id}"
  ingress {
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

}
